syntax = "proto3";

option csharp_namespace = "Authorization";

// implementation service
service AuthorizationService{
     rpc Login(LoginRequest) returns(LoginResponse);
}

// The request message who
message LoginRequest {
    string login = 1;
    string password = 2;
}

// The responce message
message LoginResponse {
    string user_Id = 1;
}    
